fix page content on custom layout to align left

--- a/assets/css/pulsair.css
+++ b/assets/css/pulsair.css
@@ -23,7 +23,8 @@ version 3.0 (http://www.gnu.org/licenses/gpl-3.0.html)
 /*------------------------------------*    $LISTS
 \*------------------------------------*/
 ul, ol {
-  margin: 0 0 20px 0; }
+  margin: 0 0 20px 0;
+  padding-left: 1em; }
 
 /*------------------------------------*    $BUTTONS
 \*------------------------------------*/
