--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -7,4 +7,5 @@
 \*------------------------------------*/
 ul,ol {
 	margin: 0 0 20px 0;
+	padding-left: 1em;
 }
